<?xml version="1.0" encoding="utf-8"?>

<!--    NIM     : 10119032-->
<!--    NAMA    : GINANJAR TUBAGUS GUMILAR-->
<!--    KELAS   : IF-1-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/masukkan_judul"
        android:inputType="text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_deskripsi"
        android:ems="10"

        android:layout_weight="20"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|start"
        android:maxLines="10"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hapus" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:title="@string/title_dashboard"
            android:visibility="visible"
            android:text="@string/add_note" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>